src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

/*Default Font of Inter*/
  body {
    font-family: 'Inter';
    text-align: left;
    @apply text-white;
  }

/* Placeholder Text*/
  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    opacity: 1; /* Firefox */
    @apply text-grey
  }

  :-ms-input-placeholder { /* Internet Explorer 10-11 */
    @apply text-grey
  }

  ::-ms-input-placeholder { /* Microsoft Edge */
    @apply text-grey
  }

/*Default Icon Size of 24px*/
  .IconSize {
    @apply w-6 h-6;
  }

/*Default Icon Display*/
  img {
    display: inline-block;
  }

/*Form Labels*/
  .formLabels {
    @apply text-body text-light-grey;
  }

/*Form Fields*/
  .formFields {
    @apply bg-off-black rounded-lg p-4;
  }

/*Special Button*/
  .SpecialButton {
    @apply p-3 bg-off-black text-white cursor-pointer;
  }
  .SpecialButtonText {
    @apply text-body mx-2 text-center;
  }

  .gradient-border{
    --borderWidth: 3px;
    position: relative;
    border-radius: 6px;
  }
  .gradient-border:after {
    content: '';
    position: absolute;
    top: calc(-1 * var(--borderWidth));
    left: calc(-1 * var(--borderWidth));
    height: calc(100% + var(--borderWidth) * 2);
    width: calc(100% + var(--borderWidth) * 2);
    background: linear-gradient(60deg, #FEBB63, #B373FC, #F992E0, #FEBB63, #B373FC, #F992E0);
    border-radius: 8px;
    z-index: -1;
    animation: animatedgradient 3s ease alternate infinite;
    background-size: 300% 300%;
  }
  @keyframes animatedgradient {
    0% {
      background-position: 0% 50%;
    }
    50% {
      background-position: 100% 50%;
    }
    100% {
      background-position: 0% 50%;
    }
  }

/*Special Button 2*/
.SpecialButton2 {
  @apply p-2 space-x-3 rounded flex items-center bg-off-black text-light-grey cursor-pointer;
}
.SpecialButton2:hover {
  @apply text-white;
}
.SpecialButton2Text {
  @apply text-info ml-2 mr-2;
}

.gradient-border2:hover {
  --borderWidth: 2px;
  position: relative;
  border-radius: 4px;
}
.gradient-border2:after {
  content: '';
  position: absolute;
  top: calc(-1 * var(--borderWidth));
  left: calc(-1 * var(--borderWidth));
  height: calc(100% + var(--borderWidth) * 2);
  width: calc(100% + var(--borderWidth) * 2);
  background: linear-gradient(60deg, #FEBB63, #B373FC, #F992E0, #FEBB63, #B373FC, #F992E0);
  border-radius: 4px;
  z-index: -1;
  animation: animatedgradient 3s ease alternate infinite;
  background-size: 300% 300%;
}
@keyframes animatedgradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

/*Main Menu*/
  .mainMenu {
    height: 100vh;
    width: 100vw;
    align-items: center;
    display: flex;
    padding: 40px;
  }
  .menuBackground {
    background-image: url(Images/main_menu_background.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }
  .mainMenuContentArea {
    max-width: 1420px;
    max-height: 800px;
    width: 100%;
    height: 100%;
    margin: auto;
    border-radius: 100px;
    align-items: center;
    display: flex;
    @apply bg-white shadow-2xl
  }
  .grainyGradient {
    position: relative;
    background-color:hsla(34,98%,69%,1);
    background-image:
    radial-gradient(at 9% 89%, hsla(268,100%,71%,1) 0px, transparent 50%),
    radial-gradient(at 51% 46%, hsla(314,100%,77%,1) 0px, transparent 50%),
    radial-gradient(at 93% 10%, hsla(268,100%,71%,1) 0px, transparent 50%);
    overflow: hidden;
  }
  .mainMenuContent {
    align-items: center;
    display: block;
    margin: auto;
  }
  .mainMenuHeading {
    font-weight: 700;
    font-size: 100px;
    text-align: center;
    width: 100%;
    height: 130px;
  }
  .mainMenuSubheading {
    font-weight: 700;
    @apply text-h3
  }
  .menuContentArea {
    max-width: 1420px;
    min-height: 600px;
    width: 100%;
    height: auto;
    margin: auto;
    padding: 100px;
    border-radius: 100px;
    @apply bg-almost-black shadow-2xl
  }

/*Workspace Creation*/
  .workspaceCreationHeading {
    display: block;
    text-align: center;
    width: 100%;
    margin-bottom: 60px;
  }
  .workspaceTemplateOptions {
    width: 100%;
    max-width: 1000px;
    margin: auto;
    height: auto;
    display: flex;
    @apply flex justify-between items-start
  }
  .workspaceTemplateCard {
    width: 300px;
    height: auto;
    min-height: 300px;
    @apply bg-darkest-grey rounded-xl p-8
  }
  .workspaceTemplateHeader {
    @apply text-h2 font-bold tracking-wider
  }
  .workspaceTemplateSubheader {
    margin-bottom: 8px;
    @apply text-info text-grey
  }
  .workspaceTemplateListItem {

  }

/*Workspace Selection*/
  .workspaceItemList {
    @apply space-y-3
  }
  .workspaceItem {
    width: 260px;
    @apply p-3 flex items-center bg-darker-grey rounded
  }
  .newWorkspaceItem {
    width: 260px;
    @apply p-2 py-3 flex items-center border-solid border-2 border-darker-grey rounded
  }
  .workspaceItemText {
    @apply text-h4 mx-2
  }
  .accountSettingsMenuItem {
    @apply py-1 px-2 space-x-3 rounded flex items-center;
  }
  .accountSettingsMenuItem:hover .MenuItemText {
    @apply text-white;
  }

/*SideBar*/
  #sideBar {
    z-index: 10;
  }

  /*SideBar Menu Items*/
    .MenuItem {
      @apply py-1 px-2 space-x-3 rounded flex items-center;
    }
    .MenuItem:hover {
      @apply bg-darker-grey;
    }
    .MenuItem:hover .MenuItemText {
      @apply text-white;
    }
    .MenuItemText {
      @apply text-light-grey text-info mx-2 mt-[1px];
    }

  /*Sidebar Divider*/
    .HrStyle {
      @apply bg-grey h-[0.5px] my-3 mx-auto border-0 rounded;
    }

  /*Page List Scroll Bar*/
    .pageList::-webkit-scrollbar {
      @apply w-2;
    }
    .pageList::-webkit-scrollbar-track {
      background: none;
    }
    .pageList::-webkit-scrollbar-thumb {
      @apply bg-grey rounded-md w-2;
    }
    .pageList::-webkit-scrollbar-thumb:hover {
      @apply bg-lighter-grey;
    }

  /* Styles for Firefox */
    .pageList {
      scrollbar-width: thin;
      scrollbar-color: #868686;
    }
  
  /* Page List */
  .pageList {
    @apply px-2;
  }
  /* Page List Items */
    .pageListItem {
      @apply py-1 px-2 mb-1 text-info rounded hover:bg-darker-grey cursor-pointer;
      @apply rounded flex items-center;
    }
    .pageListItem.selected {
      @apply bg-darker-grey;
    }
    .pageItemText {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      @apply text-light-grey text-info mx-2 mt-[2px];
    }
    .pageListItem.selected .pageItemText {
      @apply text-white;
    }

/*Create Page Popup*/
    .createPagePopup {
      position: fixed;
      top: 50%;
      left: 50%;
      width: 680px;
      transform: translate(-50%, -50%);
      z-index: 1000;
      box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
      @apply bg-darkest-grey p-16 rounded-xl;
    }

/*Popup Backdrop*/
  .backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.5);
    z-index: 99;
  }

/*Editor*/

  /*Scroll Bar*/
    .editor::-webkit-scrollbar {
      @apply w-2;
    }
    .editor::-webkit-scrollbar-track {
      background: none;
    }
    .editor::-webkit-scrollbar-thumb {
      @apply bg-grey rounded-md w-2;
    }
    .editor::-webkit-scrollbar-thumb:hover {
      @apply bg-lighter-grey;
    }

  /* Styles for Firefox */
    .editor {
      scrollbar-width: thin;
      scrollbar-color: #868686;
    }

/* Quill */

/* Slash Search */
  .slash-dropdown {
    width: 200px;
    max-height: 400px;
    position: absolute;
    z-index: 1000;
    @apply bg-darkest-grey rounded-md drop-shadow-xl
  }
  .slash-dropdown input, .slash-dropdown li {
    width: 100%;
    max-height: 400px;
    padding: 8px 12px;
  }
  .slash-dropdown input {
    width: 100%;
    @apply bg-transparent text-body text-white focus:outline-none
  }
  .slash-dropdown input::placeholder {
    @apply text-grey
  }
  .slash-dropdown li.highlighted {
    @apply bg-darker-grey rounded
  }
  .slash-dropdown .HrStyle {
    margin: 0;
    margin-bottom: 8px;
  }
  .slash-dropdown ul {
    max-height: 200px;
    overflow-y: auto;
    @apply pr-1 pl-1;
  }.slash-dropdown img {
    margin-right: 4px;
  }

   /*Scroll Bar*/
    .slash-dropdown ul::-webkit-scrollbar {
      @apply w-2;
    }
    .slash-dropdown ul::-webkit-scrollbar-track {
      @apply bg-darker-grey;
    }
    .slash-dropdown ul::-webkit-scrollbar-thumb {
      @apply bg-grey rounded-md w-2;
    }
    .slash-dropdown ul::-webkit-scrollbar-thumb:hover {
      @apply bg-lighter-grey;
    }

